# writers-room-xx

./: .env.example  .replit  AUDIT_REPORT.md  Dockerfile  Makefile  README.fixed.md  README.md  create_structure.sh  docker-compose.fixed.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  replit.md  wrx.db
api/: .env.example  alembic.ini  cli.py  requirements.fixed.txt  requirements.txt  run_tests.py  wrx.db
api/alembic/: env.py
api/app/: auth.py  background.py  config.fixed.py  config.py  main.fixed.py  main.py  middleware.py  models.py
api/chroma_db/: chroma.sqlite3
api/tests/: test_agents.py  test_diff_service.py  test_embeddings.py  test_integration.py  test_metrics.py  test_rag.py
app/: __init__.py  config.py  database.py  models.py
app/routers/: ingest.py  patches.py  scenes.py
app/services/: ai_service.py  (+4 more)
attached_assets/: Pasted-Below-is-a-developer-ready-product-specification-for-the-Multi-Agent-Writers-Room-It-s-structu-1756141376115_1756141376118.txt  WRX_Agent_Build_Manual_v1.1_full_prompts_1756143598095.txt  comprehensive_feedback_report_1756186115859.md  executive_summary_1756186115841.md  sample_codex.md  sample_manuscript.md  the_charged_complete_manuscript_1756186115809.txt  writers_room_prompts_1-91_1756147326486.md  writers_room_prompts_1-91_1756182808723.xlsx
configs/: agents.yaml  metrics.yaml  project.yaml
docker/: Dockerfile.api  Dockerfile.ui
frontend/: .env.example  next.config.js  package.json  tailwind.config.js
worker/: main.py  requirements.txt
writers-room-x/: .env.example  README.md
(+270 files in other folders)
