[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "fastapi>=0.116.1",
    "openai>=1.101.0",
    "pydantic-settings==2.3.3",
    "pydantic==2.7.4",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.31",
    "textstat==0.7.4",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
]
