[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "fastapi==0.111.0",
    "openai>=1.101.0",
    "pydantic-settings==2.3.3",
    "pydantic==2.7.4",
    "python-multipart==0.0.12",
    "sqlalchemy==2.0.31",
    "textstat==0.7.4",
    "uvicorn[standard]==0.30.3",
    "httpx==0.27.0",
    "redis==5.0.7",
    "alembic==1.13.3",
    "psycopg[binary]==3.2.1",
    "boto3==1.34.151",
    "gitpython==3.1.43",
    "typer==0.12.3",
    "rq==1.16.2",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
]
